--- a/st2ds_demo.ipynb
+++ b/st2ds_demo.ipynb
@@ -391,6 +391,29 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "import json\n",
+        "stat_path = ['/content/data/glow-tts/scale_stats_new.npy', '/content/data/hifi-GAN/scale_stats_new.npy']\n",
+        "i = 0\n",
+        "\n",
+        "for file_path in roots:\n",
+        "  with open(file_path, 'r') as file:\n",
+        "      data = json.load(file)\n",
+        "\n",
+        "  data[\"audio\"][\"stats_path\"] = stat_path[i]\n",
+        "\n",
+        "  with open(file_path, 'w', encoding='utf-8') as file:\n",
+        "      json.dump(data, file, indent=\"\\t\")\n",
+        "  i+=1"
+      ],
+      "metadata": {
+        "id": "6BplCfV9r5YM"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
       "metadata": {
         "id": "zwROk8zUHgUn"
